Akeeba Data Compliance 1.2.2
================================================================================
# [HIGH] When an admin viewed the Options page for a different user the displayed current consent preference was wrong
# [HIGH] When an admin deleted a user's profile the audit trail showed the user deleting themselves instead of the admin

Akeeba Data Compliance 1.2.1
================================================================================
# [HIGH] Automatic account deletion (lifecycle) wasn't working

Akeeba Data Compliance 1.2.0
================================================================================
+ Common PHP version warning scripts
+ Dark Mode
~ PHP 7.4 compatibility
# [HIGH] CLI (CRON) scripts could sometimes stop with a Joomla crash due to Joomla's mishandling of the session under CLI.
# [HIGH] Forced password reset in Joomla causes an infinite redirection loop (gh-28)

Akeeba Data Compliance 1.1.1
================================================================================
+ Rewritten cookie plugin to work with caching enabled
+ Consent can be transcribed from Joomla's privacy consent user profile field (migration from Joomla to DataCompliance)
~ Transcribing consent given during subscription only applies to Akeeba Subscriptions 5 and 6
~ Compatibility with Akeeba Subscriptions 7 for data export and user anonymisation (Users model has been removed)
# User Profile fields not displayed correctly when using an Edit Profile menu item

Akeeba Data Compliance 1.1.0
================================================================================
+ Protection of all component and plugin folders against direct web access
+ Export data: support for Joomla “privacy” group plugins
! Immediate failure accessing the backend of the component [gh-27]
# [HIGH] ATS export, causing fatal error
# [LOW] Cookie compliance fails with a fatal error when the server does not set the HTTP_HOST environment variable