@@ -27,7 +27,7 @@ COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_EXPORT_ADMIN="Export their data"
 COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_WIPE_ADMIN="Delete their user account"
 
 COM_DATACOMPLIANCE_OPTIONS_WIPE_HEADER="Delete your user account"
-COM_DATACOMPLIANCE_OPTIONS_WIPE_HEADER_ADMIN="Delete the user account of “%s”"
+COM_DATACOMPLIANCE_OPTIONS_WIPE_ADMIN_HEADER="Delete the user account of “%s”"
 COM_DATACOMPLIANCE_OPTIONS_WIPE_SCARY_1="THIS PROCESS IS IRREVERSIBLE!"
 COM_DATACOMPLIANCE_OPTIONS_WIPE_SCARY_2="THIS IS NOT A JOKE. IT IS VERY IMPORTANT AND HAS LEGAL CONSEQUENCES."
 COM_DATACOMPLIANCE_OPTIONS_WIPE_SCARY_3="This page gives you the chance to exercise your “right to be forgotten” as stipulated by the European Union's General Data Protection Regulation. This will be referred to hereforth with the phrase “delete your user account” which is to be understood as identical to “exercise your right to be forgotten as stipulated by the European Union's General Data Protection regulation and the member state laws which implement it”. As soon you delete your user account you will no longer be our client. We will not be able to provide any of our services to you. You waive all your rights against our company, including your right to refund (if applicable) or redress of any kind. If you approach us in the future asking us to confirm whether you have been a client or have any special requests on the grounds that you had been a client kindly remember that this will be impossible since you won't be our client as soon as you press the button to delete your account. Deleting your account (exercising your right to be forgotten) is the nuclear option: you sever all ties with us, wiping our past history. This is serious, permanent and irrevokable."
